2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* UnitTests.mdp: Flush project format changes.

2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/CompletionDatabaseTests.cs: Added unit tests for
	checking generic constraints.

	* Makefile.am:
	* UnitTests.mdp: Updated.

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Use the
	real database backed ProjectDom, instead of SimpleProjectDom. Tests
	are more reliable in this way. However, this requires some changes.
	The ProjectDom database is only updated when a file is parsed without
	errors. Many of the code snippets used in the unit tests are not
	fully parseable because they contain code partially completed (e.g.
	like "blah. "). The solution is to enclose all that partial code
	inside $ signs. So now $ has a different meaning. Instead of the
	cursor position, it means 'code written before triggering code
	completion'.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/CompletionDatabaseTests.cs: Added new test.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.Tests/SearchTests.cs: Track api changes.

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added unit test
	for "Bug 467507 - No completion of base members inside explicit
	events".

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added some
	tests to document bug "Bug 467409 - Bad code completion options".

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Tests/FoldingTests.cs: Added folding unit tests.

2009-01-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: