@@ -52,5 +52,63 @@ namespace CompletionDbTest
 	public class CustomWidget2: SomeContainer.CInnerWidget, Library2.IObject
 	{
 	}
+	
+#region Generic types with constraints
+	
+	public class GenericConstraintTest0<T>
+	{
+		T field;
+	}
+	
+	public class GenericConstraintTest1<T> where T:class
+	{
+		T field;
+	}
+	
+	public class GenericConstraintTest2<T> where T:struct
+	{
+		T field;
+	}
+	
+	public class GenericConstraintTest3<T> where T:new ()
+	{
+		T field;
+	}
+	
+	public class GenericConstraintTest4<T,U>
+		where T:CBin
+		where U:T
+	{
+		T field1;
+		U field2;
+		
+		void Run ()
+		{
+		}
+	}
+	
+	// This is wrong
+	public class GenericConstraintTest5<T,U>
+		where T:U
+		where U:T
+	{
+		T field1;
+		U field2;
+		
+		void Run ()
+		{
+		}
+	}
+	
+	public class GenericConstraintTest6<T> where T:CBin, ICloneable
+	{
+		T field;
+		
+		void Run ()
+		{
+		}
+	}
+	
+#endregion
 }
 
