@@ -1,3 +1,7 @@
+2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* completion-db-test/CompletionDbTest/Main.cs: Updated tests.
+
 2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* completion-db-test/CompletionDbTest/GenericRewrite.cs:
