@@ -1,3 +1,7 @@
+2009-01-27  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Projects/CompletionDatabaseTests.cs: Updated tests.
+
 2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* UnitTests.mdp: Flush project format changes.
